--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 
     <nav class="navbar navbar-dark bg-inverse bg-inverse-custom navbar-fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#" >
+        <a class="navbar-brand" href="index.html" >
           <img src="https://dl.dropboxusercontent.com/s/7yfl8jaczep38m1/final-transparent.png?dl=0" width="75" height="75">
         </a> 
         <div id="collapsingNavbar" class="collapse navbar-toggleable-custom" role="tabpanel" aria-labelledby="collapsingNavbar">
           <ul class="nav navbar-nav pull-xs-right">
             <li class="nav-item nav-item-toggable">
-              <a class="nav-link" href="#">Influencers<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="influencers.html">Influencers<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item nav-item-toggable">
-              <a class="nav-link" href="#">Bedrijven</a>
+              <a class="nav-link" href="influencers.html">Bedrijven</a>
             </li>
           </ul>
         </div>
@@ -147,7 +147,7 @@
                 <span class="icon-thunderbolt display-1"></span>
                 <h4 class="card-title">7</h4>
                 <h6 class="card-subtitle text-muted">Influencers</h6>
-                <p class="card-text">Dit is onze portfolio waarmee we actief werken om inkomen te koppelen aan bedrijven die willen adverteren</p>
+                <p class="card-text">Dit is onze portfolio waarmee we actief werken om influencers te koppelen aan bedrijven die willen adverteren</p>
               </div>
             </div>
           </div>
@@ -157,7 +157,7 @@
                 <span class="icon-heart display-1"></span>
                 <h4 class="card-title">179.533</h4>
                 <h6 class="card-subtitle text-muted">Likes</h6>
-                <p class="card-text">De posts van onze influencers hebben in totaal bijna tweehonderdduizend likes gekregen</p>
+                <p class="card-text">De posts van onze influencers hebben in totaal bijna tweehonderdduizend likes gekregen op instagram</p>
               </div>
             </div>
           </div>
@@ -182,11 +182,7 @@
             <div class="carousel-item active">
               <div class="blockquote">
                 <img src="img/face1.jpg" height="80" width="80" alt="Avatar" class="img-circle">
-                 <p class="h3">
-                  <a href="https://www.instagram.com/aim.amsterdam" target="_blank">
-                    Volg ons op Instagram voor updates en meer informatie
-                  </a>
-                </p>
+                 <p class="h3"><a href="https://www.instagram.com/aim.amsterdam" target="_blank">Volg ons op Instagram voor updates en meer informatie</a></p>
                 <footer><a href="https://www.instagram.com/aim.amsterdam" target="_blank">@aim.amsterdam</a></footer>
               </div>
             </div>
@@ -203,10 +199,10 @@
         <h3 class="text-xs-center">Over AIM Amsterdam</h3>
         <div class="row p-y-3">
           <div class="col-md-5">
-            <p class="wp wp-7">Wij zijn een jong bedrijf dat zich focust op het managen van advertenties die  influencers plaatsen op social media. Dit houdt in dat wij advertenties voor influencers managen. Dit doen wij door middel van influencers in contact brengen met bedrijven die goed bij het profiel van de influencer past. Hierdoor kan een bedrijf een speciefiek publiek aanspreken</p>
+            <p class="wp wp-7">Wij zijn een bedrijf dat zich focust op het managen van advertenties die influencers plaatsen op social media. Dit doen wij door influencers in contact brengen met bedrijven die goed bij het profiel van de influencer passen, hierdoor kan een bedrijf een speciefiek publiek aanspreken. Verder onderhouden wij het contact tussen de twee waardoor de influencer zich kan focussen op het maken van content</p>
           </div>
           <div class="col-md-5 col-md-offset-2 separator-x">
-            <p class="wp wp-8">Wij opereren als tussenpersoon tussen bedrijven en grote social-media gebruikers. Voor een bedrijf kunnen wij een platform bieden van grote social media gebruikers. Het bedrijf kan hiermee een specifiek publiek aanspreken, dit werkt beter dan andere advertenties. Dit komt doordat algemene advertenties bij een breed publiek terechtkomen</p>
+            <p class="wp wp-8">Wij opereren als tussenpersoon tussen bedrijven en grote social media gebruikers. Voor een bedrijf kunnen wij een platform bieden van verschillende soorten influencers, hiermee kan het bedrijf een publiek aanspreken dat het meest betrokken zal zijn. Dit werkt beter dan andere soorten advertenties, omdat algemene advertenties bij een breed publiek terechtkomen en niet genoeg aandacht krijgen</p>
           </div>
         </div>
       </div>
@@ -229,7 +225,7 @@
               <article class="center-block">
                 <span class="label label-info">Influencers</span>
                 <br>
-                <h5><a href="ui-elements.html">Hoe kunnen we jou helpen als influencer bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
+                <h5><a href="influencers.html">Hoe kunnen we jou helpen als influencer bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
              
               </article>
             </div>
@@ -243,7 +239,7 @@
             <div class="col-md-6 col-md-pull-6 p-r-0">
               <article class="center-block">
                 <span class="label label-info">Bedrijven</span>
-                <h5><a href="ui-elements.html">Wat kunnen wij betekenen voor bedrijven bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
+                <h5><a href="influencers.html">Wat kunnen wij betekenen voor bedrijven bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
         
 
                              </article>
@@ -265,14 +261,16 @@
           <div class="col-md-6 col-lg-5">
             <div class="media">
               <div class="media-left">
+                  <a href="index.html" >
                 <img src="https://dl.dropboxusercontent.com/s/7yfl8jaczep38m1/final-transparent.png?dl=0" width="75" height="75">
+              </a>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-7">
             <ul class="nav nav-inline">
-              <li class="nav-item"><a class="nav-link" href="ui-elements.html">Influencers</a></li>
-              <li class="nav-item"><a class="nav-link" href="ui-elements.html">Bedrijven</a></li>
+              <li class="nav-item"><a class="nav-link" href="influencers.html">Influencers</a></li>
+              <li class="nav-item"><a class="nav-link" href="influencers.html">Bedrijven</a></li>
               <li class="nav-item"><a class="nav-link scroll-top" href="#totop">Back to top <span class="icon-caret-up"></span></a></li>
             </ul>
           </div>
