--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         <div id="collapsingNavbar" class="collapse navbar-toggleable-custom" role="tabpanel" aria-labelledby="collapsingNavbar">
           <ul class="nav navbar-nav pull-xs-right">
             <li class="nav-item nav-item-toggable">
-              <a class="nav-link" href="/influencers.html">Influencers<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="Influencers.html">Influencers<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item nav-item-toggable">
-              <a class="nav-link" href="/influencers.html">Bedrijven</a>
+              <a class="nav-link" href="Influencers.html">Bedrijven</a>
             </li>
           </ul>
         </div>
