--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <article class="center-block">
                 <span class="label label-info">Influencers</span>
                 <br>
-                <h5><a href="influencers.html">Hoe kunnen we jou helpen als influencer bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
+                <h5><a href="Influencers.html">Hoe kunnen we jou helpen als influencer bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
              
               </article>
             </div>
@@ -239,7 +239,7 @@
             <div class="col-md-6 col-md-pull-6 p-r-0">
               <article class="center-block">
                 <span class="label label-info">Bedrijven</span>
-                <h5><a href="influencers.html">Wat kunnen wij betekenen voor bedrijven bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
+                <h5><a href="Influencers.html">Wat kunnen wij betekenen voor bedrijven bij AIM Amsterdam<span class="icon-arrow-right"></span></a></h5>
         
 
                              </article>
@@ -269,8 +269,8 @@
           </div>
           <div class="col-md-6 col-lg-7">
             <ul class="nav nav-inline">
-              <li class="nav-item"><a class="nav-link" href="influencers.html">Influencers</a></li>
-              <li class="nav-item"><a class="nav-link" href="influencers.html">Bedrijven</a></li>
+              <li class="nav-item"><a class="nav-link" href="Influencers.html">Influencers</a></li>
+              <li class="nav-item"><a class="nav-link" href="Influencers.html">Bedrijven</a></li>
               <li class="nav-item"><a class="nav-link scroll-top" href="#totop">Back to top <span class="icon-caret-up"></span></a></li>
             </ul>
           </div>
