--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <h3 class="text-xs-center">Over AIM Amsterdam</h3>
         <div class="row p-y-3">
           <div class="col-md-5">
-            <p class="wp wp-7">Wij zijn een bedrijf dat zich focust op het managen van advertenties die influencers plaatsen op social media. Dit doen wij door influencers in contact brengen met bedrijven die goed bij het profiel van de influencer passen, hierdoor kan een bedrijf een speciefiek publiek aanspreken. Verder onderhouden wij het contact tussen de twee waardoor de influencer zich kan focussen op het maken van content</p>
+            <p class="wp wp-7">Wij zijn een bedrijf dat zich focust op het managen van advertenties die influencers plaatsen op social media. Dit doen wij door influencers in contact te brengen met bedrijven die goed bij het profiel van de influencer passen, hierdoor kan een bedrijf een speciefiek publiek aanspreken. Verder onderhouden wij het contact tussen de twee waardoor de influencer zich kan focussen op het maken van content</p>
           </div>
           <div class="col-md-5 col-md-offset-2 separator-x">
             <p class="wp wp-8">Wij opereren als tussenpersoon tussen bedrijven en grote social media gebruikers. Voor een bedrijf kunnen wij een platform bieden van verschillende soorten influencers, hiermee kan het bedrijf een publiek aanspreken dat het meest betrokken zal zijn. Dit werkt beter dan andere soorten advertenties, omdat algemene advertenties bij een breed publiek terechtkomen en niet genoeg aandacht krijgen</p>
